# CorpKnow-AI

./: .dockerignore  .env  .env.example  .env.production.example  Dockerfile  README.md  README.ru.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
backend/: .env.production  Dockerfile
backend/alembic/: env.py
backend/alembic/versions/: fd505e3d24df_add_users_chats_messages_documents_.py
backend/src/: main.py  test.py
backend/src/core/: config.py  database.py
backend/src/models/: chat.py  document.py  message.py
frontend/: .dockerignore  .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  chat.ts  client.ts  documents.ts
frontend/src/hooks/: index.ts  useAuth.ts  useChat.ts  useDocuments.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Documents.tsx  Login.tsx  Osnov.tsx  Register.tsx  index.ts
frontend/src/types/: index.ts
src/: main.py
src/api/: schemas.py
src/api/auth/: dependencies.py  endpoints.py  schemas.py
src/api/chat/: dependencies.py  endpoints.py  schemas.py
src/api/document/: dependencies.py  endpoints.py  schemas.py
src/core/: config.py  database.py
src/models/: __init__.py  chat.py  document.py  documents.py  message.py  user.py  users.py
src/service/user/: base.py
src/services/auth/: auth_service.py
src/services/chat/: base.py  chat_service.py  repository.py
uploads/: 10978702-7d92-48d6-a3fa-30d2dee547d8.txt  839c1245-1966-42a9-a746-810961d69cbc.txt  c850c9e9-3075-40d4-9c9e-62a5abe22de7.txt
(+39 files in other folders)
